# python-qalculate

./: .gitignore  CMakeLists.txt  README.md  compile.sh  default.nix  flake.nix  generate.py  generate.sh  generate_stubs.sh  module.cc  proxies.hh  pytest.ini
.github/workflows/: release.yml
cmake/: BuildWheel.cmake  Qalculate.cmake  write_wheel_record.py
generate/: __main__.py  bindings.py  debug_utils.py  lint.py  merge_types.py  output.py  parsing.py  token.py  utils.py
src/: expression_item.cc  expression_item.hh  expression_items.hh  module.cc  number.cc  number.hh  options.cc  options.hh  proxies.hh  pybind.hh  ref.hh  types.pyi  wrappers.cc  wrappers.hh
tests/: test_casts.py  test_mathexpression.py  test_mathstructure.py  test_number.py  test_unit.py  test_variable.py
